# external_sorting

./: CMakeLists.txt  README.md  ext_sort.cpp  ext_sort.hpp  generator.cpp  generator.hpp  in.txt  main.cpp  out.txt  tests.hpp
